# habit-helper

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env_template  Dockerfile  create_certs.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_11_24_2126-e79d0a50e642_.py  2024_11_24_2134-204859f1683e_.py  2024_11_25_1222-2293f8e3694a_.py  2024_11_25_1349-42fce86b90bf_.py  2024_11_25_1636-328423042570_.py  2024_11_25_1718-19c9c83b6d28_.py  2024_11_25_2109-8c44419036bf_.py  2024_12_01_1326-1b9683002169_.py  2024_12_08_1913-9cbe3f094aa9_.py  2025_01_30_2150-89b48ea13bfb_.py
backend/api/: users.py
backend/core/: config.py  helper.py
backend/dependencies/: auth.py
backend/models/: __init__.py  base.py  habits.py  tracking.py  users.py
backend/repositories/: habits.py  repository.py  tracking.py  users.py
backend/routers/: __init__.py  habits.py  users.py
backend/schemas/: habits.py  results.py  tokens.py  users.py
backend/services/: habits.py  tracking.py  users.py
backend/utils/: auth.py  exceptions.py  generate_result.py  validations.py
frontend/: .env_template  Dockerfile  alembic.ini  loader.py  main.py  pyproject.toml  users.sqlite3
frontend/alembic/: env.py
frontend/alembic/versions/: 2024_12_01_1620-2dc1e5e8495b_.py
frontend/api/: general.py
frontend/api/habits/: all_habits.py  create_habit.py  delete_habit.py  freeze_habit.py  habit_name.py  mark_habit.py  my_habits.py  resume_habit.py  update_habit.py
frontend/api/users/: activity_user.py  change_password.py  change_telegram_id.py  check_user.py  create_user.py  get_token.py  info.py
frontend/config/: settings.py
frontend/database/core/: db.py  helper.py
frontend/database/crud/: add_user.py  check_user.py  update_token.py
frontend/database/models/: base.py  users.py
frontend/handlers/auth/: __init__.py  invalid_password.py  register.py  save.py
frontend/handlers/default/: __init__.py  cancel.py  help.py  registration_error.py  start.py  unrecognized.py
frontend/keyboards/: auth.py  callbacks.py  general.py
frontend/middlewares/: db.py  handle_errors.py  logging.py
frontend/states/: auth.py  habits.py
frontend/utils/: cache_keys.py  constants.py  custom_calendar.py  delete_message.py  exceptions.py  login_required.py  mailing.py  output.py  refresh_token.py  regexp.py  routers_assistants.py  texts.py
(+78 files in other folders)
