[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
package-mode = false
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pyjwt = {extras = ["crypto"], version = "^2.10.0"}
bcrypt = "^4.2.1"
pytelegrambotapi = "^4.24.0"
psycopg = "^3.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
