[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
psycopg = "^3.2.3"
python-telegram-bot-calendar = "^1.0.5"
apscheduler = "^3.11.0"
redis = "^5.2.1"
pytelegrambotapi = "^4.25.0"
alembic = "^1.14.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
